# MaintenX

./: .gitignore  LICENSE  Problem Statement  README.md
Ai system/: .env.example  .gitignore  Dockerfile  Makefile  Procfile  docker-compose.yml  pyproject.toml  requirements.txt
Ai system/configs/: config.yaml  model_config.yaml
Ai system/docs/: api.md  architecture.md  model-card.md
Ai system/models/: random_forest.pkl  xgboost.pkl
Ai system/notebooks/: exploration.ipynb
Ai system/reports/: metrics.json
Ai system/scripts/: evaluate_model.py  run_prediction.py  train_model.py
Ai system/src/predictive_maintenance/: __init__.py
Ai system/src/predictive_maintenance/api/: __init__.py  main.py  routes.py
Ai system/src/predictive_maintenance/assistant/: gemini_assistant.py  llm_explainer.py
Ai system/src/predictive_maintenance/data/: __init__.py  loader.py  preprocessing.py
Ai system/src/predictive_maintenance/evaluation/: __init__.py  metrics.py
Ai system/src/predictive_maintenance/explainability/: shap_explainer.py
Ai system/src/predictive_maintenance/features/: __init__.py  feature_engineering.py
Ai system/src/predictive_maintenance/models/: __init__.py  predict.py  random_forest.py  train.py  xgboost_model.py
Ai system/src/predictive_maintenance/utils/: __init__.py  config.py
Ai system/tests/: test_prediction.py  test_preprocessing.py  test_training.py
client/: README.md  package-lock.json  package.json  theme.ts
client/app/: globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  (+2 more)
models/: random_forest.pkl  xgboost.pkl
(+20 files in other folders)
